cmake_minimum_required(VERSION 3.0.0)
project(trial VERSION 0.1.0)

set(TARGET_NAME ${PROJECT_NAME})
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_CXX_COMPILER "g++")
# set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -std=c++11 -pthread")
set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -std=c++11")
set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib)
set(INC_DIR ${PROJECT_SOURCE_DIR}/include)
set(BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${LIB_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BIN_DIR})
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BIN_DIR})
add_subdirectory(src)
add_subdirectory(test)